cmake_minimum_required(VERSION 3.16)

project(pixanv VERSION 0.1 LANGUAGES C CXX)

set(EXECUTABLE_OUTPUT_PATH ./${CMAKE_BUILD_TYPE})

set(CMAKE_CXX_STANDARD 20)

set(INCLUDE_FILES
    messages.hpp
    app.hpp
)

set(SRC_FILES
    main.cpp
    messages.cpp
    app.cpp
)

set(EXTERNAL_FILES
    glad/src/gl.c
    tinyfiledialogs/tinyfiledialogs.c
)

list(TRANSFORM INCLUDE_FILES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/include/)
list(TRANSFORM SRC_FILES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/src/)
list(TRANSFORM EXTERNAL_FILES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/external/)

if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
    # No console
    add_executable(pixanv WIN32 ${INCLUDE_FILES} ${SRC_FILES} ${EXTERNAL_FILES})
    # Static linking
    set_property(TARGET pixanv PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
else()
    # With console
    add_executable(pixanv ${INCLUDE_FILES} ${SRC_FILES} ${EXTERNAL_FILES})
    # DEBUG definition
    target_compile_definitions(pixanv PRIVATE DEBUG)
endif()

target_include_directories(pixanv
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        external/glfw/include
        external/glad/include
        external/tinyfiledialogs
)

target_link_directories(pixanv
    PRIVATE
        external/glfw/lib
)

target_link_libraries(pixanv
    glfw3_mt
)